--- a/hadoop-tools/hadoop-aws/pom.xml
+++ b/hadoop-tools/hadoop-aws/pom.xml
@@ -39,6 +39,7 @@
     <!-- the command in jenkins for auto deploy : mvn clean -U -V deploy -Denforcer.skip=true -->
     <hadoop.version_for_build>2.7.3</hadoop.version_for_build>
     <talend.nexus.url>https://artifacts-oss.talend.com</talend.nexus.url>
+    <enforcer.skip>true</enforcer.skip>
   </properties>
   
   <distributionManagement>
