--- a/hadoop-tools/hadoop-aws/pom.xml
+++ b/hadoop-tools/hadoop-aws/pom.xml
@@ -174,6 +174,7 @@
                   <includes>
                     <include>org.apache.hadoop.fs.s3.*</include>
                     <include>org.apache.hadoop.fs.s3a.*</include>
+                    <include>org.apache.hadoop.fs.s3a.sts.*</include>
                     <include>org.apache.hadoop.fs.s3native.*</include>
                   </includes>
                 </relocation>
